changement : maven 3.9.6 ; java 21 ; plugins et dependencies (version)